--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "displayName": "Legibly Soft Theme",
     "publisher": "LeviLansing",
     "description": "",
-    "version": "1.0.5",
+    "version": "1.1.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/levilansing/legibly-soft-theme.git"
     },
     "engines": {
-        "vscode": "^1.30.0"
+        "vscode": "^1.30.0",
+        "node": "14.17.1"
     },
     "categories": [
         "Themes"
